--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Página de Login G B SISTEMAS</title>
+    <title>Login G B SISTEMAS</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div class="container" id="container">
         <div class="form-container sign-up">
             <form>
-                <h1>Criar Conta</h1>
+                <h1>Criar Conta PARA VC SEU BOS TA</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
