--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Página de Login Moderna | AsmrProg</title>
+    <title>Gb Software</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
                     <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
-                <span>ou use seu email e senha</span>
+                <span>use seu email e senha</span>
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Senha">
                 <a href="#">Esqueceu sua senha?</a>
@@ -61,10 +61,8 @@
     </div>
 
     <script src="script.js"></script>
-   <!-- Remova as linhas antigas do Firebase -->
 <script src="script.js"></script>
 <script src="auth.js" type="module"></script>
-<!-- Substitua estas linhas no seu index.html -->
 <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js'
     import { getAuth } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js'
